Reduced slider width in start to prevent overflow

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -96,7 +96,7 @@ div.slider-container>label{
 	margin-right: 2rem;
 }
 div.slider-container>input{
-	width: 20rem;
+	width: 15rem;
 }
 div.slider-container>output{
 	width: 3rem;
